# minibot

./: pyproject.toml
ltchak/: bot.py
