[tool.poetry]
name = "ltchak"
version = "0.1.0"
description = ""
authors = ["4got10king <Aldavletshina77654@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.7.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
